--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
+    "version": 2,
     "rewrites": [
         {
-            "source": "/api/:path*",
-            "destination": "/api/:path*"
-        },
-        {
-            "source": "/(.*)",
+            "source": "/((?!api/).*)",
             "destination": "/index.html"
         }
     ]
