--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
     "version": 2,
+    "cleanUrls": true,
     "rewrites": [
+        {
+            "source": "/api/proxy",
+            "destination": "/api/proxy.js"
+        },
         {
             "source": "/((?!api/).*)",
             "destination": "/index.html"
