--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,12 @@
 {
     "version": 2,
-    "cleanUrls": true,
     "rewrites": [
         {
-            "source": "/api/proxy",
-            "destination": "/api/proxy.js"
+            "source": "/api",
+            "destination": "/api/index.js"
         },
         {
-            "source": "/((?!api/).*)",
+            "source": "/((?!api).*)",
             "destination": "/index.html"
         }
     ]
