--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/api",
-            "destination": "/api/index.js"
+            "source": "/api/(.*)",
+            "destination": "/api/$1"
         },
         {
-            "source": "/((?!api).*)",
+            "source": "/(.*)",
             "destination": "/index.html"
         }
     ]
