--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
     "version": 2,
     "rewrites": [
         {
+            "source": "/api/proxy",
+            "destination": "/api/proxy.js"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
