fix: checkout cart clearing and email delivery via Vercel proxy

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
             "destination": "/api/proxy.js"
         },
         {
+            "source": "/api/send-order-email",
+            "destination": "/api/send-order-email.js"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
