--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.5.0",
+    "firebase-admin": "^13.6.1",
     "jsdom": "^28.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
